<?xml version="1.0"?>
<package>
  <name>config</name>
  <version>0.1.0</version>
  <description>The config package</description>

  <maintainer email="james@zhidaoauto.com">james</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!--export>
    <metapackage/>
  </export-->
</package>
