<package>
  <name>guardian</name>
  <version>0.0.1</version>
  <maintainer email="james@zhidaoauto.com">James</maintainer>
  <license>TBD</license>
  <description>
    system_guardian
  </description>
  <author>James</author>
  <buildtool_depend version_gte="0.5.68">catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>rostest</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>metric_msgs</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>metric_msgs</run_depend>
  
</package>
