<?xml version="1.0"?>
<package>
  <name>monitor_process</name>
  <version>0.1.0</version>
  <description>The monitor_process  package</description>

  <maintainer email="sunhaihui@zhidaoauto.com">sunhaihui</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>autopilot_msgs</build_depend>
  <build_depend>common</build_depend>
  <run_depend>roscpp</run_depend>

  <export>

  </export>
</package>
